# mupb

./: .clang-format  .clang-tidy  .clang_complete  .gitignore  .gitmodules  Makefile  README.md
docs/: Doxyfile
example/simple_decode/: Makefile  TwoInts.hpp  main.cpp
include/mupb/: decode  encode  message  types
include/mupb/_impl/: decode.hpp  encode.hpp  message.hpp  types.hpp
tests/: CMakeLists.txt
tests/protobuffs/optional_parts/: make_message.sh  simple_message.in  tmp.h
tests/protobuffs/simple_message/: simple_message.in  simple_message.proto
tests/src/: decode_fixed_test.cpp  decode_optional_parts.cpp  decode_simple_message_test.cpp  decode_varint_test.cpp  types_wire_type.cpp
